css/utils.css
.primary--colour {
    color: var(--primaryColour);
}

.secondary--colour {
    color: var(--secondaryColour);
}

.tertiary--colour {
    color: var(--tertiaryColour);
}

.img--block {
    display: block;
}

.letter--spacing {
    letter-spacing: 1px;
}

.border--radius {
    border-radius: var(--border-radius);
}

.border--radius--s {
    border-radius: var(--border-radius-s);
}

.border--radius--l {
    border-radius: var(--border-radius-l);
}

.flex {
    display: flex;
}

.align--items--center {
    align-items: center;
}

.relative {
    position: relative;
}

.font--weight--bold {
    font-weight: var(--font-weight-bold);
}

@media screen and (min-width: 821px) {
    .only--show--on--mobile {
        display: none;
    }
}

